[package]
name = "seventh_core"
description = "Core library for Seventh cryptocurrency trading engine"
version = "0.1.0"
authors = ["sudo-rushil <rushil.mallarapu@gmail.com>"]
edition = "2018"
keywords = ["cryptocurrency", "coinbase", "bitcoin"]
repository = ""
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

chrono = "0.4"

phf = { version = "0.8", features = ["macros"] }
